@@ -4,6 +4,8 @@ Bugfixes in 5.1 version
 
 * The rpm macro directory is automatically detected.
 
+* the sysvinit/systemd systems are now detected
+
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Bugfixes in 5.0 version
